sage is to edit my code in myanimation

--- a/ascii.html
+++ b/ascii.html
@@ -26,12 +26,12 @@
     <fieldset>
         <legend>Animation:</legend>
         <select name="select" id="selection">
-            <option value="JUGGLER">JUGGLER</option>
+            <option value="juggler">juggler</option>
             
-            <option value="BIKE">BIKE</option>
-            <option value="DIVE">DIVE</option>
-            <option value="CUSTOM">CUSTOM</option>
-            <option VALUE="EXERCISE">EXERCISE</option>
+            <option value="bike">bike</option>
+            <option value="dive">dive</option>
+            <option value="custom">custom</option>
+            <option VALUE="exercise">exercise</option>
 
             
         </select>
